# ChangeLog for net-dns/bind
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.362 2011/11/28 10:19:03 chainsaw Exp $

  28 Nov 2011; Tony Vroon <chainsaw@gentoo.org> bind-9.7.4_p1.ebuild:
  Marked stable on AMD64 based on arch testing by Tomáš "Mepho" Pružina &
  Agostino "ago" Sarubbo in security bug #390753.

  26 Nov 2011; Raúl Porcel <armin76@gentoo.org> bind-9.7.4_p1.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #390753

  22 Nov 2011; Jeroen Roovers <jer@gentoo.org> bind-9.7.4_p1.ebuild:
  Stable for HPPA (bug #390753).

  22 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> bind-9.7.4_p1.ebuild:
  x86 stable wrt bug #390753

  17 Nov 2011; Christian Ruppert <idl0r@gentoo.org> bind-9.8.1_p1.ebuild:
  Fix sdlz patching, thanks to Dessa who reported it via IRC.

*bind-9.8.1_p1 (17 Nov 2011)
*bind-9.7.4_p1 (17 Nov 2011)

  17 Nov 2011; Christian Ruppert <idl0r@gentoo.org> +bind-9.7.4_p1.ebuild,
  +bind-9.8.1_p1.ebuild:
  Version bump, fixes a serious security issue, CVE-2011-4313 / bug 390753.

  25 Sep 2011; Christian Ruppert <idl0r@gentoo.org> bind-9.8.1.ebuild:
  Remove obsolete warning.

  14 Sep 2011; Christian Ruppert <idl0r@gentoo.org> files/named.init-r11:
  Remove deprecated opts variable as well as --oknodo.

  10 Sep 2011; Christian Ruppert <idl0r@gentoo.org> bind-9.8.1.ebuild,
  +files/bind-9.8.1-sdlz_helper.patch:
  Fix dlz linking, bug 382269, thanks to Todd Goodman <tsg@bonedaddy.net>.

*bind-9.7.4 (10 Sep 2011)

  10 Sep 2011; Christian Ruppert <idl0r@gentoo.org> -bind-9.7.3_p1.ebuild,
  +bind-9.7.4.ebuild:
  Version bump to 9.7.4.

  02 Sep 2011; Christian Ruppert <idl0r@gentoo.org> bind-9.8.1.ebuild:
  Disable replace-flags re bug 158664 for now, the bug is really old and a lot
  changed since then.

  01 Sep 2011; Christian Ruppert <idl0r@gentoo.org> bind-9.8.1.ebuild,
  metadata.xml:
  EAPI bump. Add more useflags. Make use of REQUIRED_USE for dlz/db flags.