@@ -22,17 +22,17 @@ DIST bind-geoip-1.3-9.7.2-P2.patch 54084 RMD160 fcc2308bd2832df821f76aeb1ea1c574
 DIST bind-geoip-1.3-readme.txt 10040 RMD160 073956324ed4780e0e0cdbf40ae259f85ebef9d2 SHA1 e13ea2f458adfed3f1a20f9fe3eb2bfd484fc0b0 SHA256 380ce89f1a614f46571ad59bddf0f268275691aa2d7a7a7bf1c2a3ef4d26e845
 DIST bind-sdb-ldap-1.1.0-fc14.patch.bz2 9477 RMD160 eb7507dc4b1da0064516d9e75dbc435553b1c9ce SHA1 8c269cd172c6d90df38dab201cdd105eff03cbe3 SHA256 fe043a573ba187dcc8b0f7313d4408236e6916ec246b0443b7e71b33c8303ae9
 DIST dyndns-samples.tbz2 22866 RMD160 27d5b2d0edb8e1ff16b3f980c38d7af33ccf0c7d SHA1 0a62e9458d0e16b67a3a2f63ea485ce969f1fb4d SHA256 92fb06a92ca99cbbe96b90bcca229ef9c12397db57ae17e199dad9f1218fdbe8
-EBUILD bind-9.7.3_p3.ebuild 11547 RMD160 6e1ab2efcb184db200a53190b016a7d763499898 SHA1 dc534b640bb4ca05d7e3b700bc1c8a75b0d58ed9 SHA256 2e64fbe000308956c75c1edd324073f9cd377af1ad7320343a581ef03a719e27
-EBUILD bind-9.7.4.ebuild 11558 RMD160 85cd5fd33caabba8f60616e852a02318bf379282 SHA1 befc8aff7a07142a09809d45dc36695b0b21f45d SHA256 ff2b2094e3007cfce211f50253ebac91d1e9c0c1bcdfa38537920312a69b3bff
-EBUILD bind-9.7.4_p1.ebuild 11515 RMD160 982fbbd927e63e1615fd68082d1b42028c24cbc1 SHA1 0ab690185f8e3720d31f0bd0eeb27d47afcea0b3 SHA256 34fc90255c3b2ef9a7175556bb04f0086f92ace2eecaf4e83b1d874ae2251722
+EBUILD bind-9.7.3_p3.ebuild 11549 RMD160 d8773e17b340f6d73589ede19fd1ed04fb207167 SHA1 2be6e03e72edbff841b6c9817e27c8c14897ae50 SHA256 6ff108b0cae84af3c4c7023474de2dffb49d894f92ec20f0502d21d806722cbd
+EBUILD bind-9.7.4.ebuild 11562 RMD160 1a943a31178572ddd376f52189c44e750827a963 SHA1 edfa3b98fcd29050a50f6c4c83cff7cce248cd4e SHA256 a90e6483a9cedde9487f1873535d1f263632ea7ba4573fc60b709266b86f7893
+EBUILD bind-9.7.4_p1.ebuild 11516 RMD160 47a013fd2a78d79ad573429985f5cfb883aa21ab SHA1 488c3c87bd950e9966139ae2b1358347cb2c518c SHA256 d16b97d8248c6bd9729c5136cc5147653e882012d54cf9553dd3a96f3d62454d
 EBUILD bind-9.8.1.ebuild 11826 RMD160 a6ad80de98e1335da7bdeb580d3509145f169e3d SHA1 d9d0097b4ef8e728b8ead39ec408cd732b899890 SHA256 507f3d861dc0e72e8c57883af3f88524b8cd67b02a74c570f850391704af33b7
 EBUILD bind-9.8.1_p1.ebuild 11729 RMD160 e3f78a3595c8664ff2412ba90952a20ce10114b4 SHA1 23b4f50ac426092946ab25ee5a85ca0fddabf932 SHA256 6cdf2d1b80b6fca0f57769f97ed253b7ea7612c3b209dc6a5e03f0e5b5343910
-MISC ChangeLog 61316 RMD160 07ec00ab1f64979edd53d257e7dab04f31049d0d SHA1 7377ede3b9266a42de186c56b28a9804c8fc0598 SHA256 efd809161bdb0b3ec6ee58df8e7bf486819ac42d5ed540f0555274953faa1cca
+MISC ChangeLog 61497 RMD160 c854a2231e3cc3256e77cd9c5feff6226c0222b6 SHA1 75d67757eee8b732cbf12151ae37a3de3584e79a SHA256 06f3c44f27969984e815678d101a25fccfb904c1788f3f78f9ce9d60e7a93392
 MISC metadata.xml 887 RMD160 3c0fdcaacc812fc3e558afbbdb91dd6efbf377f9 SHA1 73e55d5772ca66d165643bf389847234c32593d7 SHA256 c0a53163775c42b68ed319c68f18234d8e6d908b318066a0d533bf7bcd40ce7c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7TYC4ACgkQp5vW4rUFj5qwTgCePZbbAoMYIZc3LcrkiMSjJkr8
-pJIAnjrvRbcDKDrBsa1ncjO/0/EGbgbz
-=xdY4
+iEYEARECAAYFAk7VB/YACgkQp5vW4rUFj5p1JwCbBHeVVqo7okcwpkNG0fwlNxXf
+fdkAoIFbaGxYvQxmd9c2gqB7I/wwfkBY
+=z646
 -----END PGP SIGNATURE-----
