@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/bind
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.362 2011/11/28 10:19:03 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.363 2011/11/29 16:27:10 chainsaw Exp $
+
+  29 Nov 2011; Tony Vroon <chainsaw@gentoo.org> bind-9.7.3_p3.ebuild,
+  bind-9.7.4.ebuild, bind-9.7.4_p1.ebuild:
+  Minor spelling/grammar fixes. Cleared with idl0r on #gentoo-dev.
 
   28 Nov 2011; Tony Vroon <chainsaw@gentoo.org> bind-9.7.4_p1.ebuild:
   Marked stable on AMD64 based on arch testing by Tomáš "Mepho" Pružina &
